--- a/sidebar.html
+++ b/sidebar.html
@@ -11,15 +11,15 @@
 							</ul>	
 						</li>
 						<li>
-							<a class="dropmenu" href="#" ><i class="icon-list-alt"></i><span class="hidden-tablet">Billing</span><span class="label label-important"> 2 </span></a>
+							<a class="dropmenu" href="#" ><i class="icon-list-alt"></i><span class="hidden-tablet">Billing</span></a>
 							<ul>
-								<li><a class="submenu" href="Addhotelbill.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
+								<li><a class="submenu" href="Addhotelinvoice.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
 								<li><a class="submenu" href="Addcatbill.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
 						<li>
-							<a class="dropmenu" href="#"><i class="icon-group"></i><span class="hidden-tablet">Worker</span><span class="label label-important"> 3 </span></a>
+							<a class="dropmenu" href="#"><i class="icon-group"></i><span class="hidden-tablet">Worker</span></a>
 							<ul>
 								<li><a class="submenu" href="#"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
 								<li><a class="submenu" href="#"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
@@ -27,9 +27,18 @@
 							</ul>	
 						</li>
 
-					
+					<li><a class="dropmenu" href="#"><i class="icon-tasks"></i><span class="hidden-tablet">Manage Products</span></a>
+							<ul>
+								<li><a class="submenu" href="add_dish_form.php"><i class="icon-hand-right"></i><span class="hidden-tablet">Add New Dishes</span></a></li>
+								<li><a class="submenu" href="add_item_form.php"><i class="icon-hand-right"></i><span class="hidden-tablet">Add New Items</span></a></li>
+								
+								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
+							</ul>	
+
+						</li>
 						<li><a class="dropmenu" href="#"><i class="icon-tasks"></i><span class="hidden-tablet"> Tasks</span></a>
 							<ul>
+
 								<li><a class="submenu" href="invoice.php"><i class="icon-hand-right"></i><span class="hidden-tablet">Item List Invoice</span></a></li>
 								<li><a class="submenu" href="#"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
