Updated Sidebar add new worker module

--- a/sidebar.html
+++ b/sidebar.html
@@ -5,16 +5,16 @@
 	 <li>
 							<a class="dropmenu" href="#"><i class="icon-shopping-cart"></i><span class="hidden-tablet">Inventory</span></a>
 							<ul>
-								<li><a class="submenu" href="#"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
-								<li><a class="submenu" href="#"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
+								<li><a class="submenu" href="inventory_hotel_details.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
+								<li><a class="submenu" href="inventory_cater_details.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
 						<li>
 							<a class="dropmenu" href="#" ><i class="icon-list-alt"></i><span class="hidden-tablet">Billing</span></a>
 							<ul>
-								<li><a class="submenu" href="Addhotelinvoice.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel</span></a></li>
-								<li><a class="submenu" href="Addcatbill.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering</span></a></li>
+								<li><a class="submenu" href="Addhotelinvoice.php"><i class="icon-tag"></i><span class="hidden-tablet"> Hotel</span></a></li>
+								<li><a class="submenu" href="Addcatbill.php"><i class="icon-tags"></i><span class="hidden-tablet"> Catering</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
@@ -27,10 +27,10 @@
 							</ul>	
 						</li>
 
-					<li><a class="dropmenu" href="#"><i class="icon-tasks"></i><span class="hidden-tablet">Manage Products</span></a>
+					<li><a class="dropmenu" href="#"><i class="icon-pinterest"></i><span class="hidden-tablet">Manage Products</span></a>
 							<ul>
-								<li><a class="submenu" href="add_dish_form.php"><i class="icon-hand-right"></i><span class="hidden-tablet">Add New Dishes</span></a></li>
-								<li><a class="submenu" href="add_item_form.php"><i class="icon-hand-right"></i><span class="hidden-tablet">Add New Items</span></a></li>
+								<li><a class="submenu" href="add_dish_form.php"><i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Dishes</span></a></li>
+								<li><a class="submenu" href="add_item_form.php"><i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Items</span></a></li>
 								
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
@@ -47,6 +47,7 @@
 						</li>
 						
 						<li><a href="login.html"><i class="icon-lock"></i><span class="hidden-tablet"> Login Page</span></a></li>
+
 					</ul>
 				</div>
 			</div>
