--- a/login.html
+++ b/login.html
@@ -56,25 +56,25 @@
 						<a href="#"><i class="halflings-icon cog"></i></a>
 					</div>
 					<h2>Login to your account</h2>
-					<form class="form-horizontal" action="index.html" method="post">
+					<form class="form-horizontal" action="" method="post">
 						<fieldset>
 							
 							<div class="input-prepend" title="Username">
 								<span class="add-on"><i class="halflings-icon user"></i></span>
-								<input class="input-large span10" name="username" id="username" type="text" placeholder="type username"/>
+								<input class="input-large span10" name="Username" id="username" type="text" placeholder="Username"/>
 							</div>
 							<div class="clearfix"></div>
 
 							<div class="input-prepend" title="Password">
 								<span class="add-on"><i class="halflings-icon lock"></i></span>
-								<input class="input-large span10" name="password" id="password" type="password" placeholder="type password"/>
+								<input class="input-large span10" name="Password" id="password" type="password" placeholder="type password"/>
 							</div>
 							<div class="clearfix"></div>
 							
 							<label class="remember" for="remember"><input type="checkbox" id="remember" />Remember me</label>
 
 							<div class="button-login">	
-								<button type="submit" class="btn btn-primary">Login</button>
+								<button type="submit" class="btn btn-primary" name="submit">Login</button>
 							</div>
 							<div class="clearfix"></div>
 					</form>
@@ -90,6 +90,26 @@
 	</div><!--/.fluid-container-->
 	
 		</div><!--/fluid-row-->
+<?php
+include "db.php";
+
+if(isset($_POST['submit']))
+{
+$u=$_POST['Username'];
+$p=$_POST['Password'];
+
+if(mysqli_query("select * from login where username='$a'"))
+{
+echo "Success";
+}
+else
+echo "failed";
+
+
+}
+?>
+
+
 	    <div class="common-modal modal fade" id="common-Modal1" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-content">
 				<ul class="list-inline item-details">
