--- a/sidebar.html
+++ b/sidebar.html
@@ -3,34 +3,34 @@
 					<ul class="nav nav-tabs nav-stacked main-menu">
 						<li><a href="index.php"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Dashboard</span></a></li>
 	 <li>
-							<a class="dropmenu" href="#">&nbsp&nbsp&nbsp&nbsp<i class="icon-shopping-cart"></i><span class="hidden-tablet">Inventory</span></a>
+							<a class="dropmenu" href="#"><i class="icon-shopping-cart"></i><span class="hidden-tablet">Inventory</span></a>
 							<ul>
-								<li><a class="submenu" href="inventory_hotel_details.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel Inventory</span></a></li>
-								<li><a class="submenu" href="inventory_cater_details.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering Inventory</span></a></li>
+								<li><a class="submenu" href="inventory_hotel_details.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-hand-right"></i><span class="hidden-tablet">  Hotel Inventory</span></a></li>
+								<li><a class="submenu" href="inventory_cater_details.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-hand-right"></i><span class="hidden-tablet"> Catering Inventory</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
 						<li>
-							<a class="dropmenu" href="#">&nbsp&nbsp&nbsp&nbsp<i class="icon-list-alt"></i><span class="hidden-tablet">Billing</span></a>
+							<a class="dropmenu" href="#" ><i class="icon-list-alt"></i><span class="hidden-tablet">Billing</span></a>
 							<ul>
-								<li><a class="submenu" href="Addhotelinvoice.php"><i class="icon-tag"></i><span class="hidden-tablet"> Hotel Billing</span></a></li>
-								<li><a class="submenu" href="Addcatbill.php"><i class="icon-tags"></i><span class="hidden-tablet"> Catering Billing</span></a></li>
+								<li><a class="submenu" href="Addhotelinvoice.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-tag"></i><span class="hidden-tablet"> Hotel Billing</span></a></li>
+								<li><a class="submenu" href="Addcatbill.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-tags"></i><span class="hidden-tablet"> Catering Billing</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
 						<li>
-							<a class="dropmenu" href="#">&nbsp&nbsp&nbsp&nbsp<i class="icon-group"></i><span class="hidden-tablet">Worker</span></a>
+							<a class="dropmenu" href="#"><i class="icon-group"></i><span class="hidden-tablet">Worker</span></a>
 							<ul>
-								<li><a class="submenu" href="h_worker.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel Worker</span></a></li>
-								<li><a class="submenu" href="c_worker.php"><i class="icon-hand-right"></i><span class="hidden-tablet"> Catering Worker</span></a></li>
+								<li><a class="submenu" href="h_worker.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-hand-right"></i><span class="hidden-tablet"> Hotel Worker</span></a></li>
+								<li><a class="submenu" href="c_worker.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-hand-right"></i><span class="hidden-tablet"> Catering Worker</span></a></li>
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
 						</li>
 
-					<li><a class="dropmenu" href="#">&nbsp&nbsp&nbsp&nbsp<i class="icon-pinterest"></i><span class="hidden-tablet">Manage Products</span></a>
+					<li><a class="dropmenu" href="#"><i class="icon-pinterest"></i><span class="hidden-tablet">Manage Products</span></a>
 							<ul>
-								<li><a class="submenu" href="add_dish_form.php"><i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Dishes</span></a></li>
-								<li><a class="submenu" href="add_item_form.php"><i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Items</span></a></li>
+								<li><a class="submenu" href="add_dish_form.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Dishes</span></a></li>
+								<li><a class="submenu" href="add_item_form.php">&nbsp&nbsp&nbsp&nbsp<i class="icon-circle-arrow-right"></i><span class="hidden-tablet">Add New Items</span></a></li>
 								
 								<!-- <li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li> -->
 							</ul>	
