--- a/sidebar.html
+++ b/sidebar.html
@@ -47,7 +47,7 @@
 							</ul>	
 
 						</li>-->
-						
+							<li><a href="Event_info.php"><i class="icon-bell"></i><span class="hidden-tablet">Events</span></a></li>
 						<li><a href="login.php"><i class="icon-lock"></i><span class="hidden-tablet">Login Page</span></a></li>
 
 					</ul>
